<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/introduction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team_m"
        android:textColor="#1E88E5"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.098" />

    <Button
        android:id="@+id/profileBtn1"
        android:layout_width="279dp"
        android:layout_height="57dp"
        android:onClick="sendProfile"
        android:text="@string/thien_s_profile"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/profileBtn2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/introduction"
        app:layout_constraintVertical_bias="0.725" />

    <Button
        android:id="@+id/profileBtn2"
        android:layout_width="271dp"
        android:layout_height="47dp"
        android:background="#00ACC1"
        android:backgroundTint="#00ACC1"
        android:onClick="sendUyenProfile"
        android:text="@string/uyen_s_profile"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/profileBtn3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/introduction"
        app:layout_constraintVertical_bias="0.811" />

    <Button
        android:id="@+id/profileBtn3"
        android:layout_width="275dp"
        android:layout_height="55dp"
        android:text="@string/sang_s_profile"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/introduction"
        app:layout_constraintVertical_bias="0.739" />

    <TextView
        android:id="@+id/instruction"
        android:layout_width="309dp"
        android:layout_height="72dp"
        android:lineSpacingExtra="8sp"
        android:text="@string/click_in_one_of_the_below_button_to_see_our_member_s_profile"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/profileBtn1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/introduction"
        app:layout_constraintVertical_bias="0.505" />

</androidx.constraintlayout.widget.ConstraintLayout>